--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,29 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="divFooter">
+    <div class="logo text-base">
+        <a href="./index.html">
+            <span class="font-open-sans font-bold text-gray-900">Chess</span>
+            <span class="font-roboto font-bold uppercase text-colorLogo"
+                >Fun</span
+            >
+        </a>
+    </div>
+    <ul class="flex flex-row justify-center space-x-4">
+        <li>
+            <a href="./index.html" class="text-base">Inicio</a>
+        </li>
+        <li>
+            <a href="./members.html" class="text-base">Miembros</a>
+        </li>
+    </ul>
+    <ul class="flex flex-row space-x-4">
+        <li class="social-icon">
+            <a href="#" class=""><i class="fab fa-google-plus-g"></i></a>
+        </li>
+        <li class="social-icon">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li class="social-icon">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+    </ul>
 </footer>
