--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,9 +4,22 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   "Segoe UI Symbol";
 $font-family-serif: "Georgia", "Times New Roman", serif;
+$font-family-Montserrat: "Montserrat", "sans-serif";
 
 $uoc-corporate: #000078;
 $uoc-masterbrand: #73edff;
 $uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
 
 $mqMinWidth: 420px;
+
+$font-family-Montserrat: "Montserrat", "sans-serif";
+
+$colorItems: #ffd6ad;
+$background: #eeecdf;
+$backgroundContact: rgb(5, 45, 63);
+$mqMinWidth: 420px;
+$font-awesome: "FontAwesome";
+
+$theme-colors: (
+ "primary": #ff8e51 // pon el código de color que prefieras
+);
