--- a/src/views/header.html
+++ b/src/views/header.html
@@ -2,7 +2,7 @@
     <nav class="divNavbar">
         <div class="logo text-4xl">
             <a href="./index.html" class="logo nav-link">
-                <span class="font-open-sans font-bold text-gray-900">Chess</span>
+                <span class="font-open-sans text-gray-900">Chess</span>
                 <span class="font-roboto font-bold uppercase text-colorLogo">Fun</span>
             </a>
         </div>
