--- a/src/views/member_card.html
+++ b/src/views/member_card.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col m-5 w-72 items-center border-10">
+<div class="flex flex-col m-5 w-72 md:w-80 lg:w-96 items-center border-10">
   <img class="rounded-t-2xl object-cover" src="{{ image }}" alt="Card image" />
   <div class="p-4 bg-colorCards rounded-b-2xl">
-    <h2 class="text-lg text-center font-bold">{{ name }}</h2>
+    <h2 class="text-3xl text-center">{{ name }}</h2>
     <p>{{ description }}</p>
   </div>
 </div>
